--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 languageCode = "en-us"
 title = "If You Care"
 theme = "detox"
-baseurl = "http://davityle.github.io/"
+baseurl = "https://davityle.github.io/"
 
 [params]
 	description = "A software development blog by Tyler Davis"
